Add `@GenerateWither` annotation